RESOLVED FIXED276661
[iOS 18] Web view lays out at the wrong dimensions after rotating in element fullscreen
https://bugs.webkit.org/show_bug.cgi?id=276661
Summary [iOS 18] Web view lays out at the wrong dimensions after rotating in element ...
Wenson Hsieh
Reported 2024-07-16 08:23:46 PDT
Attachments
Wenson Hsieh
Comment 1 2024-07-16 08:46:51 PDT
EWS
Comment 2 2024-07-16 10:40:45 PDT
Committed 281008@main (26daa5456ac4): <https://commits.webkit.org/281008@main> Reviewed commits have been landed. Closing PR #30865 and removing active labels.
EWS
Comment 3 2024-07-23 14:20:47 PDT
Committed 280938.101@safari-7619-branch (7b12c7293a76): <https://commits.webkit.org/280938.101@safari-7619-branch> Reviewed commits have been landed. Closing PR #1454 and removing active labels.
Note You need to log in before you can comment on or make changes to this bug.